# nd2-grid-organizer

./: .gitignore  README.md  pyproject.toml
src/nd2grid/: __init__.py  nd2_to_pptx.py
